--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
+        "react-toast": "^1.0.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -37,13 +38,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-
     }
-
-
-
-
-
-
-
 }
